// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OTUItem /> should render when [verified=false] 1`] = `
<withRouter(LinkContainer)
  className="spaced"
  key="foo"
  to="/refs/baz/otus/foo"
>
  <Item__StyledOTUItem>
    <strong>
      Foo
    </strong>
    <Item__OTUItemAbbreviation>
      FB
    </Item__OTUItemAbbreviation>
    <Icon
      faStyle="fas"
      fixedWidth={false}
      name="tag"
      pullRight={true}
      tip="This OTU is unverified"
    />
  </Item__StyledOTUItem>
</withRouter(LinkContainer)>
`;

exports[`<OTUItem /> should render when [verified=true] 1`] = `
<withRouter(LinkContainer)
  className="spaced"
  key="foo"
  to="/refs/baz/otus/foo"
>
  <Item__StyledOTUItem>
    <strong>
      Foo
    </strong>
    <Item__OTUItemAbbreviation>
      FB
    </Item__OTUItemAbbreviation>
  </Item__StyledOTUItem>
</withRouter(LinkContainer)>
`;
